<resources>
    <string name="app_name">Edit contact</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="website_hint">Website</string>
    <string name="save_button_label">save contact</string>
    <string name="call_button_label">Call</string>
    <string name="text_button_label">Text</string>
    <string name="email_button_label">Email</string>
    <string name="directions_button_label">Map</string>
    <string name="web_button_label">Web</string>
    <string name="first_name_then_last_name">Enter your first name followed by your last name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_home_address">Enter your address</string>
    <string name="enter_your_website_address">Enter your website address</string>
    <string name="full_name">FULL NAME</string>
    <string name="avatar">Avatar</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email address</string>
    <string name="address">Address</string>
    <string name="website_address">Website Address</string>
    <string name="email_subject">Assignment 7 - Android Contacts App</string>
    <string name="email_text">Hi, hope all is well.\n\nI would like to set up a meeting next week. We will need to discuss Assignment 7 on Tue. at 9:00am. I am having trouble understanding how this email thing works..\n\nThanks,\nMM</string>
    <string name="email_to">irconde@ualr.edu</string>
    <string name="email_chooser">To complete action choose:</string>
    <string name="txt">smsto:</string>
    <string name="txt_body">sms_body</string>
    <string name="txt_msg">Have you done last week\'s homework?</string>
    <string name="tel">tel:</string>
</resources>
