<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInfoActivity">

    <!--TODO 03. Create a new layout file to define the GUI elements of the ContactInfoActivity.-->

    <ImageView
        android:id="@+id/ivContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person" />

    <TextView
        android:id="@+id/tvName"
        style="@style/AppTheme.ContactInfo.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/full_name"
        android:fontFamily="@font/productsans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivContact" />

    <HorizontalScrollView
        android:id="@+id/HSV"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chpGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName">

            <com.google.android.material.chip.Chip
                android:id="@+id/chpCall"
                style="@style/AppTheme.ContactInfo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productsans_regular"
                android:text="@string/call_button_label"
                app:chipEndPadding="8dp"
                app:chipIcon="@drawable/ic_phone_black_24dp"
                app:chipStartPadding="8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chpText"
                style="@style/AppTheme.ContactInfo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productsans_regular"
                android:text="@string/text_button_label"
                app:chipEndPadding="8dp"
                app:chipIcon="@drawable/ic_textsms_black_24dp"
                app:chipStartPadding="8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chpEmail"
                style="@style/AppTheme.ContactInfo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productsans_regular"
                android:text="@string/email_button_label"
                app:chipEndPadding="8dp"
                app:chipIcon="@drawable/ic_email_black_24dp"
                app:chipStartPadding="8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chpMap"
                style="@style/AppTheme.ContactInfo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productsans_regular"
                android:text="@string/directions_button_label"
                app:chipEndPadding="8dp"
                app:chipIcon="@drawable/ic_place_black_24dp"
                app:chipStartPadding="8dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chpWeb"
                style="@style/AppTheme.ContactInfo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productsans_regular"
                android:text="@string/web_button_label"
                app:chipEndPadding="8dp"
                app:chipIcon="@drawable/ic_public_black_24dp"
                app:chipStartPadding="8dp" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/ivTelephone"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/phone_number"
        app:layout_constraintBottom_toBottomOf="@+id/tilTelephoneNumber"
        app:layout_constraintEnd_toStartOf="@+id/tilTelephoneNumber"
        app:layout_constraintTop_toTopOf="@+id/tilTelephoneNumber"
        app:srcCompat="@drawable/ic_phone_black_24dp" />

    <TextView
        android:id="@+id/tilTelephoneNumber"
        style="@style/AppTheme.ContactInfo.TextView"
        android:layout_width="290dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/productsans_regular"
        android:gravity="start|center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/phone_hint"
        app:layout_constraintEnd_toEndOf="@+id/HSV"
        app:layout_constraintTop_toBottomOf="@+id/HSV" />

    <ImageView
        android:id="@+id/ivEmail"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/email_address"
        app:layout_constraintBottom_toBottomOf="@+id/tilEmail"
        app:layout_constraintEnd_toStartOf="@+id/tilEmail"
        app:layout_constraintTop_toTopOf="@+id/tilEmail"
        app:srcCompat="@drawable/ic_email_black_24dp" />

    <TextView
        android:id="@+id/tilEmail"
        style="@style/AppTheme.ContactInfo.TextView"
        android:layout_width="290dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="start|center"
        android:fontFamily="@font/productsans_regular"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="@+id/tilTelephoneNumber"
        app:layout_constraintStart_toStartOf="@+id/tilTelephoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/tilTelephoneNumber" />

    <ImageView
        android:id="@+id/ivAddress"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/address"
        app:layout_constraintBottom_toBottomOf="@+id/tilAddress"
        app:layout_constraintEnd_toStartOf="@+id/tilAddress"
        app:layout_constraintTop_toTopOf="@+id/tilAddress"
        app:srcCompat="@drawable/ic_place_black_24dp" />

    <TextView
        android:id="@+id/tilAddress"
        style="@style/AppTheme.ContactInfo.TextView"
        android:layout_width="290dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="start|center"
        android:fontFamily="@font/productsans_regular"
        android:hint="@string/address_hint"
        app:layout_constraintEnd_toEndOf="@+id/tilEmail"
        app:layout_constraintStart_toStartOf="@+id/tilEmail"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail" />

    <ImageView
        android:id="@+id/ivWebsite"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/website_address"
        app:layout_constraintBottom_toBottomOf="@+id/tilWebsite"
        app:layout_constraintEnd_toStartOf="@+id/tilWebsite"
        app:layout_constraintTop_toTopOf="@+id/tilWebsite"
        app:srcCompat="@drawable/ic_public_black_24dp" />

    <TextView
        android:id="@+id/tilWebsite"
        style="@style/AppTheme.ContactInfo.TextView"
        android:layout_width="290dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="start|center"
        android:fontFamily="@font/productsans_regular"
        android:hint="@string/website_hint"
        app:layout_constraintEnd_toEndOf="@+id/tilAddress"
        app:layout_constraintStart_toStartOf="@+id/tilAddress"
        app:layout_constraintTop_toBottomOf="@+id/tilAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>